fixing minor spacing issue

--- a/src/assets/scss/partials/_calendar.scss
+++ b/src/assets/scss/partials/_calendar.scss
@@ -4,7 +4,7 @@
     grid-gap: .25rem;
     list-style: none;
     padding-left: 0;
-    margin-bottom: .125rem;
+    margin-bottom: .25rem;
 
     li {
         background-color: var(--transparent-high);
